# url-translator

./: .dockerignore  .env  .env.example  .env.local.example  .env.production.example  .gitignore  BACKEND_REVIEW_SUMMARY.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  Todos.md  Trunk.toml  build.rs  deploy.sh  docker-compose.yml  health-check.sh  index.html  justfile  setup_admin.sh  style.css  test_debug.rs  示例文件.md
.github/workflows/: test.yml
backend/: .env  .env.local  Cargo.toml  Dockerfile  create_admin.sql  generate_hash.rs
backend/config/: default.toml
backend/migrations/: 20250710000001_initial_setup.sql  20250710230000_add_user_roles.sql
backend/src/: config.rs  database.rs  error.rs  main.rs  models.rs  routes.rs
backend/src/handlers/: admin.rs  auth.rs  health.rs  migration.rs  mod.rs  projects.rs  search.rs  system.rs  translations.rs  users.rs  websocket.rs
backend/src/middleware/: auth.rs  mod.rs  rate_limit.rs  request_id.rs
backend/src/models/: config.rs  project.rs  search.rs  translation.rs  user.rs
backend/src/services/: auth_service.rs  event_listener.rs  mod.rs  redis_service.rs  search_service.rs  task_queue.rs  translation_service.rs  user_service.rs
docs/: BACKEND_INTEGRATION_PROGRESS.md  FRONTEND_BACKEND_INTEGRATION_COMPLETE.md  PROJECT_REVIEW.md  README.md  backend-architecture.md  deeplx-service.md  environment-setup.md  getting-started.md  jina-service.md  troubleshooting.md
scripts/: build-prod.sh  check-orbstack-services.sh  dev.sh  generate-env.sh  init-db.sql  quick-start.sh  start-dev.sh  validate-config.sh
src/: app.rs  lib.rs  main.rs
src/components/: async_translation_display.rs  auth_modal.rs  auth_required.rs  batch_translation.rs  bilingual_display.rs  common.rs  file_name_preview.rs  header.rs  mod.rs  notification.rs  preview_panel.rs  progress_indicator.rs  settings.rs  theme_selector.rs  translation_result.rs  url_input.rs
src/config/: env.rs  features.rs  mod.rs  runtime.rs
src/error/: app_error.rs  error_handler.rs  mod.rs
src/hooks/: mod.rs  use_async_translation.rs  use_auth.rs  use_backend_translation.rs  use_batch_translation.rs  use_config.rs  use_history.rs  use_preview.rs  use_translation.rs
src/pages/: batch.rs  history.rs  home.rs  mod.rs  projects.rs  settings.rs  tasks.rs  translation.rs
src/services/: api_client.rs  batch_service.rs  config_service.rs  content_processor.rs  deeplx_service.rs  file_naming_service.rs  history_service.rs  jina_service.rs  mod.rs  preview_service.rs  rate_limiter.rs
src/theme/: catppuccin.rs  mod.rs  provider.rs
src/types/: api_types.rs  history.rs  mod.rs  translation.rs
src/utils/: mod.rs  sanitization.rs  validation.rs
tests/: content_processor_tests.rs  simple_tests.rs
(+7 files in other folders)
