[package]
name = "url-translator"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
leptos_dom = "0.6"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Blob", "Url", "Window", "Document", "Element", "HtmlAnchorElement", "HtmlElement", "CssStyleDeclaration", "Storage"] }
gloo-storage = "0.3"
thiserror = "1.0"
js-sys = "0.3"
urlencoding = "2.1"
futures = "0.3"
gloo-timers = { version = "0.2", features = ["futures"] }
flate2 = "1.0"

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.11", features = ["json"] }

# Non-WASM dependencies  
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[dependencies.uuid]
version = "1.0"
features = ["v4", "wasm-bindgen"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
